# HMRTA_TS_GENERATION

./: .gitignore  AUTOMATONS_README.md  Automaton.h  BuchiAutomaton.cpp  BuchiAutomaton.h  CMakeLists.txt  Edge_Node.h  LTLtoBuchiAutomaton.cpp  Makefile  ProductAutomaton.cpp  ProductAutomaton.h  RelablingFormulas  RelablingFormulas.cpp  TS.cpp  TS.h  TestingAutomaton.cpp
Learning_Spot/: ParsingandPrintingLTL  ParsingandPrintingLTL.cpp  TestingEquivalance  TestingEquivalance.cpp
PlanningSystem/: CMakeLists.txt  CompleteWorkflowExample.cpp  INDEX.md  IntegratedPlanningSystem.cpp  IntegratedPlanningSystem.h  Makefile  ORGANIZATION_SUMMARY.md  PlanningUtilities.cpp  PlanningUtilities.h  SYSTEM_DOCUMENTATION.md  VoronoiPruningExample.cpp  VoronoiPruningPipeline.cpp  VoronoiPruningPipeline.h  feasibility_matrix.txt
Transition_Systems/: BasicTransitionSystem.cpp  GeneralTransitionSystem.cpp  GridWorldTransitionSystem.cpp  GridWorldTransitionSystem.h
output/: atomic_ts_edges.dat.labels  atomic_ts_nodes.dat.labels  atomic_ts_plot.gp  buchi_automaton.dot  product_automaton.dot  ts_automaton.dot
